Criando Form Edit

--- a/public/index.html
+++ b/public/index.html
@@ -1,49 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="preconnect" href="https://fonts.gstatic.com"/>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/fullcalendar/main.css">
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/fullcalendar/main.js">
-    
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/fortawesome/fontawesome-free/css/fontawesome.css">
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/fortawesome/fontawesome-free/css/regular.css">
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/fortawesome/fontawesome-free/css/brands.css">
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/fortawesome/fontawesome-free/css/solid.css">
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
-    <!-- include fonts -->
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/ace-font.css">
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <!-- ace.css -->
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/ace.css">
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/slim.css">
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/ace-themes.css">
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/views/pages/horizontal/@page-style.css">
+  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/fullcalendar/main.css">
+  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/fullcalendar/main.js">
 
-  
-    <!-- timelyne - style.css -->
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/fortawesome/fontawesome-free/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/fortawesome/fontawesome-free/css/regular.css">
+  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/fortawesome/fontawesome-free/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/fortawesome/fontawesome-free/css/solid.css">
 
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
+  <!-- include fonts -->
+  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/ace-font.css">
+
+  <!-- ace.css -->
+  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/ace.css">
+  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/slim.css">
+  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/ace-themes.css">
+  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/views/pages/horizontal/@page-style.css">
+
+
+  <!-- timelyne - style.css -->
+  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/css/style.css">
+
+  <title>React App</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -53,16 +52,18 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
-  <script src="%PUBLIC_URL%/js/ace.js"></script>
+</body>
+<script src="%PUBLIC_URL%/js/ace.js"></script>
 
-  <!-- demo.js is only for Ace's demo and you shouldn't use it -->
-  <script src="%PUBLIC_URL%/app/browser/demo.js"></script>
+<!-- demo.js is only for Ace's demo and you shouldn't use it -->
+<script src="%PUBLIC_URL%/app/browser/demo.js"></script>
 
-  <!-- "Horizontal Menu" page script to enable its demo functionality -->
-  <script src="%PUBLIC_URL%/views/pages/horizontal/@page-script.js"></script>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" ></script>
+<!-- "Horizontal Menu" page script to enable its demo functionality -->
+<script src="%PUBLIC_URL%/views/pages/horizontal/@page-script.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
+<script lang="javascript">
+</script>
 
 
 </html>
